--- a/原型/prototype/prototype.csproj
+++ b/原型/prototype/prototype.csproj
@@ -46,14 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="RecommendForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="RecommendForm.Designer.cs">
+      <DependentUpon>RecommendForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LearnForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LearnForm.designer.cs">
+      <DependentUpon>LearnForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="RecommendForm.resx">
+      <DependentUpon>RecommendForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LearnForm.resx">
+      <DependentUpon>LearnForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
