--- a/原型/prototype/prototype.csproj
+++ b/原型/prototype/prototype.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Services" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,12 +56,6 @@
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Memories.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Memories.Designer.cs">
-      <DependentUpon>Memories.cs</DependentUpon>
-    </Compile>
     <Compile Include="PersonalInfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,24 +67,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="RecommendForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RecommendForm.Designer.cs">
-      <DependentUpon>RecommendForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LearnForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LearnForm.designer.cs">
-      <DependentUpon>LearnForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Memories.resx">
-      <DependentUpon>Memories.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PersonalInfoForm.resx">
       <DependentUpon>PersonalInfoForm.cs</DependentUpon>
@@ -98,12 +83,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="RecommendForm.resx">
-      <DependentUpon>RecommendForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LearnForm.resx">
-      <DependentUpon>LearnForm.cs</DependentUpon>
-    </EmbeddedResource>
+    <EmbeddedResource Include="Report1.rdlc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
