--- a/Prototype2.0/Prototype2.0/Prototype2.0.csproj
+++ b/Prototype2.0/Prototype2.0/Prototype2.0.csproj
@@ -94,6 +94,7 @@
     <EmbeddedResource Include="settings.resx">
       <DependentUpon>settings.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
