完成了做题分类的模块 Signed-off-by: Chang5 <chang2249293078@gmail.com>

--- a/Prototype2.0/Prototype2.0/Prototype2.0.csproj
+++ b/Prototype2.0/Prototype2.0/Prototype2.0.csproj
@@ -105,7 +105,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="FenLei.txt" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\photo.PNG" />
   </ItemGroup>
