--- a/Prototype2.0/Prototype2.0/Prototype2.0.csproj
+++ b/Prototype2.0/Prototype2.0/Prototype2.0.csproj
@@ -81,6 +81,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Display.cs" />
+    <Compile Include="FenLei.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FenLei.Designer.cs">
+      <DependentUpon>FenLei.cs</DependentUpon>
+    </Compile>
     <Compile Include="main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +104,9 @@
     </Compile>
     <Compile Include="User.cs" />
     <Compile Include="WebService.cs" />
+    <EmbeddedResource Include="FenLei.resx">
+      <DependentUpon>FenLei.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="main.resx">
       <DependentUpon>main.cs</DependentUpon>
     </EmbeddedResource>
