--- a/Prototype2.0/Prototype2.0/Prototype2.0.csproj
+++ b/Prototype2.0/Prototype2.0/Prototype2.0.csproj
@@ -61,6 +61,9 @@
   <PropertyGroup>
     <SignManifests>false</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>4432.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -80,6 +83,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Compare.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Compare.Designer.cs">
+      <DependentUpon>Compare.cs</DependentUpon>
+    </Compile>
     <Compile Include="Display.cs" />
     <Compile Include="FenLei.cs">
       <SubType>Form</SubType>
@@ -104,6 +119,12 @@
     </Compile>
     <Compile Include="User.cs" />
     <Compile Include="WebService.cs" />
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Compare.resx">
+      <DependentUpon>Compare.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FenLei.resx">
       <DependentUpon>FenLei.cs</DependentUpon>
     </EmbeddedResource>
@@ -134,6 +155,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="4432.ico" />
+    <Content Include="www.ico.la_03613875da206dbfbe4347dd6a5054fa_128X128.ico" />
+    <Content Include="www.ico.la_366c67df23d3d94f681a49fc2b29f2bf_227X134.ico" />
     <Content Include="分类.txt" />
   </ItemGroup>
   <ItemGroup>
