多文档完善

--- a/Prototype2.0/Prototype2.0/Prototype2.0.csproj
+++ b/Prototype2.0/Prototype2.0/Prototype2.0.csproj
@@ -144,6 +144,8 @@
     <EmbeddedResource Include="settings.resx">
       <DependentUpon>settings.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
+    <None Include="Properties\DataSources\User.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
