--- a/Prototype2.0/Prototype2.0/Prototype2.0.csproj
+++ b/Prototype2.0/Prototype2.0/Prototype2.0.csproj
@@ -96,12 +96,6 @@
       <DependentUpon>Compare.cs</DependentUpon>
     </Compile>
     <Compile Include="Display.cs" />
-    <Compile Include="FenLei.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FenLei.Designer.cs">
-      <DependentUpon>FenLei.cs</DependentUpon>
-    </Compile>
     <Compile Include="main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +105,12 @@
     <Compile Include="Problem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recommend.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Recommend.Designer.cs">
+      <DependentUpon>Recommend.cs</DependentUpon>
+    </Compile>
     <Compile Include="settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,9 +131,6 @@
     <EmbeddedResource Include="Compare.resx">
       <DependentUpon>Compare.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FenLei.resx">
-      <DependentUpon>FenLei.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="main.resx">
       <DependentUpon>main.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,6 +144,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Recommend.resx">
+      <DependentUpon>Recommend.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="settings.resx">
       <DependentUpon>settings.cs</DependentUpon>
     </EmbeddedResource>
